# strtod

./: .bumpversion.toml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  Makefile  README.markdown  README.md  cliff.toml
.github/: DOCS.md
.github/workflows/: benchmarks_baseline.yml  check.yml  fuzz.yml  nostd.yml  pr_benchmarks.yml  pr_benchmarks_closed.yml  pr_fork_benchmarks.yml  pr_fork_benchmarks_closed.yml  pr_fork_benchmarks_run.yml  release-plz.yml  safety.yml  test.yml
extras/data-tests/: Cargo.toml  README.md
extras/data-tests/src/: main.rs
extras/simple-bench/: Cargo.toml  README.md  benchmark-results.md
extras/simple-bench/benches/: strtod_mesh.rs
extras/simple-bench/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: ffi.rs  lib.rs
