[package]
name = "strtod"
version = "0.0.1"
authors = [
    "Pieter van Ginkel <pvginkel@gmail.com>",
    "Kristoffer Andersson <kod.kristoff@gmail.com",
]
description = "A high precision floating point parser implementation for Rust"
documentation = "https://docs.rs/strtod"
homepage = "https://github.com/kod-kristoff/strtod"
repository = "https://github.com/kod-kristoff/strtod"
readme = "README.markdown"
keywords = ["strtod", "parse", "parsing", "float", "f64"]
license = "MIT OR Apache-2.0"
rust-version = "1.16.0"
