[package]
name = "strtod"
version = "0.1.0"
edition = "2018"
rust-version = "1.48.0"
description = "A high precision floating point parser implementation for Rust"
documentation = "https://docs.rs/strtod"
readme = "README.md"
homepage = "https://github.com/kod-kristoff/strtod"
repository = "https://github.com/kod-kristoff/strtod"
license = "MIT OR Apache-2.0"
keywords = ["f64", "float", "parse", "parsing", "strtod"]

[workspace]
# resolver = "2"
members = ["extras/data-tests", "extras/simple-bench"]
