[package]
name = "strtod-simple-bench"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[[bench]]
harness = false
name = "strtod_mesh"

[dependencies]
anyhow = "1.0"
fast-float = "0.2"
fast-float2 = { git = "https://github.com/Alexhuszagh/fast-float-rust" }
fastrand = "2.1.1"
lexical = "7.0.2"
lexical-core = "1.0.2"
strtod = { path = "../.." }
structopt = "0.3"

[dev-dependencies]
criterion = "0.5"
